--- a/css/style.css
+++ b/css/style.css
@@ -25,16 +25,19 @@ html {
   font-size: 62.5%;
   scroll-behavior: smooth;
 }
-@media only screen and (max-width: 75em) {
+
+@media only screen and (max-width: 20em) {
   html {
-    font-size: 59%;
+    font-size: 30%;
   }
 }
+
 @media only screen and (max-width: 56.25em) {
   html {
     font-size: 56%;
   }
 }
+
 @media only screen and (min-width: 112.5em) {
   html {
     font-size: 65%;
@@ -82,6 +85,7 @@ textarea {
   letter-spacing: 3px;
   text-align: center;
 }
+
 @media only screen and (max-width: 37.5em) {
   .heading-primary {
     font-size: 4.5rem;
@@ -91,6 +95,7 @@ textarea {
 .heading-sec__mb-bg {
   margin-bottom: 11rem;
 }
+
 @media only screen and (max-width: 56.25em) {
   .heading-sec__mb-bg {
     margin-bottom: 8rem;
@@ -100,17 +105,20 @@ textarea {
 .heading-sec__mb-med {
   margin-bottom: 9rem;
 }
+
 @media only screen and (max-width: 56.25em) {
   .heading-sec__mb-med {
     margin-bottom: 8rem;
   }
 }
+
 .heading_about_imagediv {
   display: flex;
   gap: 50px;
   width: 90%;
   margin: auto;
 }
+
 .heading-sec__main {
   display: block;
   font-size: 4rem;
@@ -121,13 +129,16 @@ textarea {
   margin-bottom: 3.5rem;
   position: relative;
 }
+
 .heading-sec__main--lt {
   color: #000;
 }
+
 .heading-sec__main--lt::after {
   content: "";
   background: #000 !important;
 }
+
 .heading-sec__main::after {
   content: "";
   position: absolute;
@@ -139,11 +150,13 @@ textarea {
   transform: translateX(-50%);
   border-radius: 5px;
 }
+
 @media only screen and (max-width: 37.5em) {
   .heading-sec__main::after {
     top: calc(100% + 1.2rem);
   }
 }
+
 .heading-sec__sub {
   display: block;
   text-align: center;
@@ -154,11 +167,13 @@ textarea {
   margin: auto;
   line-height: 1.6;
 }
+
 @media only screen and (max-width: 37.5em) {
   .heading-sec__sub {
     font-size: 1.8rem;
   }
 }
+
 .heading-sec__sub--lt {
   color: #000;
 }
@@ -168,6 +183,7 @@ textarea {
   text-transform: uppercase;
   letter-spacing: 1px;
 }
+
 .subheading-sm {
   font-size: 1.5rem;
   /* text-transform: uppercase; */
@@ -179,6 +195,7 @@ textarea {
   margin: auto;
   width: 92%;
 }
+
 .about_contact_resume {
   display: flex;
   gap: 30px;
@@ -195,21 +212,26 @@ textarea {
   box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.15);
   transition: transform 0.3s;
 }
+
 .btn:hover {
   transform: translateY(-3px);
 }
+
 .btn--bg {
   padding: 1.5rem 8rem;
   font-size: 2rem;
 }
+
 .btn--med {
   padding: 1.5rem 5rem;
   font-size: 1.6rem;
 }
+
 .btn--theme {
   background: rgb(15, 87, 160);
   color: white;
 }
+
 .btn--theme-inv {
   color: rgb(15, 87, 160);
   background: #fff;
@@ -217,22 +239,27 @@ textarea {
   box-shadow: none;
   padding: calc(1.5rem - 2px) calc(5rem - 2px);
 }
+
 .projects__row_content_textTech {
   display: flex;
   gap: 5px;
 }
+
 .projects_link_deploye {
   display: flex;
   gap: 20px;
 }
+
 .projects__row_content_textTech p {
   font-size: 18px;
   margin-top: 10px;
   color: #666;
 }
+
 .sec-pad {
   padding: 12rem 0;
 }
+
 @media only screen and (max-width: 56.25em) {
   .sec-pad {
     padding: 8rem 0;
@@ -246,6 +273,7 @@ textarea {
   width: 100%;
   line-height: 1.6;
 }
+
 @media only screen and (max-width: 37.5em) {
   .text-primary {
     font-size: 2rem;
@@ -258,11 +286,9 @@ textarea {
 
 .home-hero {
   color: rgb(32, 31, 31);
-  background: linear-gradient(
-      to right,
+  background: linear-gradient(to right,
       rgb(22, 38, 54.9),
-      rgba(11, 199, 233, 0.8)
-    ),
+      rgba(11, 199, 233, 0.8)),
     url(https://d33wubrfki0l68.cloudfront.net/daac8858fd4a0ccea44f59dfd079c3c16c263f33/c157c/assets/svg/common-bg.svg);
   background-position: center;
   height: 100vh;
@@ -270,12 +296,14 @@ textarea {
   max-height: 120rem;
   position: relative;
 }
+
 @media only screen and (max-width: 37.5em) {
   .home-hero {
     height: unset;
     min-height: unset;
   }
 }
+
 .home-hero__socials {
   position: absolute;
   top: 50%;
@@ -283,26 +311,31 @@ textarea {
   border-left: 2px solid rgb(212, 210, 210);
   transform: translateY(-50%);
 }
+
 @media only screen and (max-width: 56.25em) {
   .home-hero__socials {
     display: none;
   }
 }
+
 .home-hero__mouse-scroll-cont {
   position: absolute;
   bottom: 3%;
   left: 50%;
   transform: translateX(-50%);
 }
+
 @media only screen and (max-width: 37.5em) {
   .home-hero__mouse-scroll-cont {
     display: none;
   }
 }
+
 .home-hero__social {
   width: 5rem;
   background-color: #000;
 }
+
 .home-hero__social-icon-link {
   width: 100%;
   display: block;
@@ -310,15 +343,19 @@ textarea {
   border-bottom: 2px solid rgb(236, 234, 234);
   transition: background 0.3s;
 }
+
 .home-hero__social-icon-link:hover {
   background: rgba(255, 255, 255, 0.1);
 }
+
 .home-hero__social-icon-link--bd-none {
   border-bottom: 0;
 }
+
 .home-hero__social-icon {
   width: 100%;
 }
+
 .home-hero__content {
   position: absolute;
   top: 50%;
@@ -327,6 +364,7 @@ textarea {
   max-width: 90rem;
   width: 92%;
 }
+
 @media only screen and (max-width: 37.5em) {
   .home-hero__content {
     padding: 19rem 0 13rem 0;
@@ -335,10 +373,12 @@ textarea {
     transform: translate(0, 0);
   }
 }
+
 .home-hero__info {
   margin: 3rem auto 0 auto;
   max-width: 80rem;
 }
+
 .home-hero__cta {
   margin-top: 5rem;
   text-align: center;
@@ -347,27 +387,32 @@ textarea {
 .about {
   background: #fafafa;
 }
+
 .about__content {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 10rem;
 }
+
 @media only screen and (max-width: 56.25em) {
   .about__content {
     grid-template-columns: 1fr;
     grid-gap: 8rem;
   }
 }
+
 .about__content-title {
   font-weight: 700;
   font-size: 2.8rem;
   margin-bottom: 3rem;
 }
+
 @media only screen and (max-width: 37.5em) {
   .about__content-title {
     font-size: 2.4rem;
   }
 }
+
 .about__content-details-para {
   font-size: 1.8rem;
   color: grey;
@@ -375,10 +420,12 @@ textarea {
   line-height: 1.7;
   margin-bottom: 1rem;
 }
+
 .about__content-details-para--hl {
   font-weight: 700;
   margin: 0 3px;
 }
+
 .about__content-details-para:last-child {
   margin-bottom: 4rem;
 }
@@ -389,6 +436,7 @@ textarea {
   grid-gap: 5rem;
   margin-bottom: 11rem;
 }
+
 @media only screen and (max-width: 56.25em) {
   .projects__row {
     grid-template-columns: 1fr;
@@ -396,22 +444,27 @@ textarea {
     margin-bottom: 8rem;
   }
 }
+
 @media only screen and (max-width: 56.25em) {
   .projects__row {
     text-align: center;
   }
 }
+
 .projects__row:last-child {
   margin-bottom: 0;
 }
+
 .projects__row-img-cont {
   overflow: hidden;
 }
+
 .projects__row-img {
   width: 90%;
   height: 250px;
   display: block;
 }
+
 .projects__row-content {
   padding: 2rem 0;
   display: flex;
@@ -419,21 +472,25 @@ textarea {
   flex-direction: column;
   align-items: flex-start;
 }
+
 @media only screen and (max-width: 56.25em) {
   .projects__row-content {
     align-items: center;
   }
 }
+
 .projects__row-content-title {
   font-weight: 700;
   font-size: 2.8rem;
   margin-bottom: 2rem;
 }
+
 @media only screen and (max-width: 37.5em) {
   .projects__row-content-title {
     font-size: 2.4rem;
   }
 }
+
 .projects__row-content-desc {
   font-size: 1.8rem;
   color: grey;
@@ -441,6 +498,7 @@ textarea {
   line-height: 1.7;
   margin-bottom: 3rem;
 }
+
 @media only screen and (max-width: 37.5em) {
   .projects__row-content-desc {
     font-size: 1.7rem;
@@ -448,15 +506,14 @@ textarea {
 }
 
 .contact {
-  background: linear-gradient(
-      to right,
+  background: linear-gradient(to right,
       rgb(22, 38, 54.9),
-      rgba(11, 199, 233, 0.8)
-    ),
+      rgba(11, 199, 233, 0.8)),
     url(https://d33wubrfki0l68.cloudfront.net/daac8858fd4a0ccea44f59dfd079c3c16c263f33/c157c/assets/svg/common-bg.svg);
   background-size: cover;
   background-position: center;
 }
+
 .contact__form-container {
   box-shadow: 0 0 10px rgba(26, 24, 24, 0.1);
   background: white;
@@ -468,19 +525,23 @@ textarea {
   border-radius: 5px;
   margin: 5rem auto 0 auto;
 }
+
 @media only screen and (max-width: 37.5em) {
   .contact__form-container {
     padding: 3rem;
   }
 }
+
 .contact__form-field {
   margin-bottom: 4rem;
 }
+
 @media only screen and (max-width: 37.5em) {
   .contact__form-field {
     margin-bottom: 3rem;
   }
 }
+
 .contact__form-label {
   color: #666;
   font-size: 1.4rem;
@@ -490,6 +551,7 @@ textarea {
   display: block;
   text-align: left;
 }
+
 .contact__form-input {
   color: #333;
   padding: 2rem;
@@ -507,44 +569,52 @@ textarea {
   /* Code for Mozilla Firefox 4 to 18 */
   /* Code for Mozilla Firefox 19+ */
 }
+
 .contact__form-input::placeholder {
   color: #999;
   font-weight: 600;
   font-size: 1.6rem;
 }
+
 .contact__form-input::-webkit-input-placeholder {
   color: #999;
   font-weight: 600;
   font-size: 1.6rem;
 }
+
 .contact__form-input:-ms-input-placeholder {
   color: #999;
   font-weight: 600;
   font-size: 1.6rem;
 }
+
 .contact__form-input::-ms-input-placeholder {
   color: #999;
   font-weight: 600;
   font-size: 1.6rem;
 }
+
 .contact__form-input:-moz-placeholder {
   opacity: 1;
   color: #999;
   font-weight: 600;
   font-size: 1.6rem;
 }
+
 .contact__form-input::-moz-placeholder {
   opacity: 1;
   color: #999;
   font-weight: 600;
   font-size: 1.6rem;
 }
+
 .contact__btn {
   width: 30%;
   padding: 2rem 4rem;
   font-size: 1.6rem;
   color: white;
 }
+
 @media only screen and (max-width: 37.5em) {
   .contact__btn {
     width: 100%;
@@ -559,17 +629,20 @@ textarea {
   background: #fff;
   box-shadow: 0 10px 100px rgba(0, 0, 0, 0.1);
 }
+
 .header__content {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 1rem 5rem;
 }
+
 @media only screen and (max-width: 56.25em) {
   .header__content {
     padding: 0 2rem;
   }
 }
+
 .header__logo-container {
   display: flex;
   align-items: center;
@@ -577,9 +650,11 @@ textarea {
   color: #333;
   transition: color 0.3s;
 }
+
 .header__logo-container:hover {
   color: rgb(15, 87, 160);
 }
+
 .header__logo-img-cont {
   width: 5rem;
   height: 5rem;
@@ -587,6 +662,7 @@ textarea {
   overflow: hidden;
   margin-right: 1.5rem;
 }
+
 @media only screen and (max-width: 56.25em) {
   .header__logo-img-cont {
     width: 4.5rem;
@@ -594,6 +670,7 @@ textarea {
     margin-right: 1.2rem;
   }
 }
+
 .header__logo-img {
   width: 100%;
   height: 100%;
@@ -601,20 +678,24 @@ textarea {
   object-position: center;
   display: block;
 }
+
 .header__logo-sub {
   font-size: 1.8rem;
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 1px;
 }
+
 .header__links {
   display: flex;
 }
+
 @media only screen and (max-width: 37.5em) {
   .header__links {
     display: none;
   }
 }
+
 .header__link {
   padding: 2.2rem 3rem;
   display: inline-block;
@@ -625,31 +706,38 @@ textarea {
   font-weight: 700;
   transition: color 0.3s;
 }
+
 .header__link:hover {
   color: rgb(15, 87, 160);
 }
+
 @media only screen and (max-width: 56.25em) {
   .header__link {
     padding: 3rem 1.8rem;
     font-size: 1.5rem;
   }
 }
+
 .header__main-ham-menu-cont {
   display: none;
   width: 3rem;
   padding: 2.2rem 0;
 }
+
 @media only screen and (max-width: 37.5em) {
   .header__main-ham-menu-cont {
     display: block;
   }
 }
+
 .header__main-ham-menu {
   width: 100%;
 }
+
 .header__main-ham-menu-close {
   width: 100%;
 }
+
 .header__sm-menu {
   background: #fff;
   position: absolute;
@@ -662,16 +750,19 @@ textarea {
   -webkit-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.1);
 }
+
 .header__sm-menu--active {
   visibility: hidden;
   opacity: 0;
 }
+
 @media only screen and (max-width: 37.5em) {
   .header__sm-menu--active {
     visibility: visible;
     opacity: 1;
   }
 }
+
 .header__sm-menu-link a {
   display: block;
   text-decoration: none;
@@ -685,15 +776,19 @@ textarea {
   letter-spacing: 2px;
   transition: color 0.3s;
 }
+
 .header__sm-menu-link a:hover {
   color: rgb(15, 87, 160);
 }
+
 .header__sm-menu-link:first-child a {
   border-top: 1px solid #eee;
 }
+
 .header__sm-menu-link-last {
   border-bottom: 0;
 }
+
 .contact_underform_details {
   background-color: white;
   margin: auto;
@@ -709,55 +804,67 @@ textarea {
   background: #000;
   color: #fff;
 }
+
 .main-footer__upper {
   display: flex;
   justify-content: space-between;
   padding: 8rem 0;
 }
+
 @media only screen and (max-width: 56.25em) {
   .main-footer__upper {
     padding: 6rem 0;
   }
 }
+
 @media only screen and (max-width: 37.5em) {
   .main-footer__upper {
     display: block;
   }
 }
+
 .main-footer__row-1 {
   order: 2;
 }
+
 @media only screen and (max-width: 56.25em) {
   .main-footer__row-1 {
     margin-bottom: 5rem;
   }
 }
+
 .main-footer__row-2 {
   width: 40%;
   order: 1;
   max-width: 50rem;
 }
+
 @media only screen and (max-width: 56.25em) {
   .main-footer__row-2 {
     width: 100%;
   }
 }
+
 .main-footer__short-desc {
   margin-top: 2rem;
   color: #eee;
   font-size: 1.5rem;
   line-height: 1.7;
 }
+
 .main-footer__social-cont {
   margin-top: 2rem;
 }
+
 .main-footer__icon {
   margin-right: 1rem;
   width: 2.5rem;
 }
+
 .main-footer__icon--mr-none {
   margin-right: 0;
 }
+
 .main-footer__lower {
   padding: 4rem 0;
   border-top: 1px solid #444;
@@ -766,11 +873,13 @@ textarea {
   text-align: left;
   text-align: center;
 }
+
 .main-footer__lower a {
   text-decoration: underline;
   font-weight: bold;
   margin-left: 2px;
 }
+
 @media only screen and (max-width: 56.25em) {
   .main-footer__lower {
     padding: 3.5rem 0;
@@ -781,15 +890,25 @@ textarea {
   display: flex;
   flex-wrap: wrap;
 }
+
+
 .skills__skill {
   padding: 1rem 2rem;
   margin-bottom: 1.5rem;
   margin-right: 1.5rem;
-  font-size: 1.6rem;
   background: rgba(153, 153, 153, 0.2);
   border-radius: 5px;
-  font-weight: 600;
-  color: rgb(46, 45, 45);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 12rem;
+  display: flex;
+  justify-content: center;
+  font-size: 1.8rem;
+}
+
+.skills__skill>img {
+  height: 70px;
+  padding: 10%;
 }
 
 .mouse {
@@ -800,6 +919,7 @@ textarea {
   position: relative;
   overflow: hidden;
 }
+
 .mouse::before {
   content: "";
   width: 5px;
@@ -832,6 +952,7 @@ textarea {
 .pic {
   width: 30%;
 }
+
 .bigbasket,
 .fragrance {
   width: 100%;
