--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ $breakpoint arguement choices:
 - tab-land
 - big-desktop
 
-Inside media queries 1em is always 16px i.e 1em = 16px at every screen size only inside media queries
+Inside media queries 1em is always 16px i.e 1em = 16px at every screen size all media queries
 */
 *,
 *::after,
@@ -26,23 +26,19 @@ html {
   scroll-behavior: smooth;
 }
 
-@media only screen and (max-width: 600px) {
+@media all and (max-width: 600px) {
   html {
     font-size: 40%;
   }
-
-  /* body {
-    width: 100%;
-  } */
 }
 
-@media only screen and (max-width: 56.25em) {
+@media all and (max-width: 57.25rem) {
   html {
     font-size: 60%;
   }
 }
 
-@media only screen and (min-width: 112.5em) {
+@media all and (min-width: 112.5em) {
   html {
     font-size: 75%;
   }
@@ -90,7 +86,7 @@ textarea {
   text-align: center;
 }
 
-@media only screen and (max-width: 37.5em) {
+@media all and (max-width: 37.5rem) {
   .heading-primary {
     font-size: 4.5rem;
   }
@@ -100,7 +96,7 @@ textarea {
   margin-bottom: 11rem;
 }
 
-@media only screen and (max-width: 56.25em) {
+@media all and (max-width: 57.25rem) {
   .heading-sec__mb-bg {
     margin-bottom: 8rem;
   }
@@ -111,7 +107,7 @@ textarea {
   margin-bottom: 9rem;
 }
 
-@media only screen and (max-width: 56.25em) {
+@media all and (max-width: 57.25rem) {
   .heading-sec__mb-med {
     margin-bottom: 8rem;
   }
@@ -156,7 +152,7 @@ textarea {
   border-radius: 5px;
 }
 
-@media only screen and (max-width: 37.5em) {
+@media all and (max-width: 37.5rem) {
   .heading-sec__main::after {
     top: calc(100% + 1.2rem);
   }
@@ -173,7 +169,7 @@ textarea {
   line-height: 1.6;
 }
 
-@media only screen and (max-width: 37.5em) {
+@media all and (max-width: 37.5rem) {
   .heading-sec__sub {
     font-size: 1.8rem;
   }
@@ -196,7 +192,7 @@ textarea {
 }
 
 .main-container {
-  max-width: 120rem;
+  /* max-width: 120rem; */
   margin: auto;
   width: 92%;
 }
@@ -265,7 +261,7 @@ textarea {
   padding: 12rem 0;
 }
 
-@media only screen and (max-width: 56.25em) {
+@media all and (max-width: 57.25rem) {
   .sec-pad {
     padding: 8rem 0;
   }
@@ -279,7 +275,7 @@ textarea {
   line-height: 1.6;
 }
 
-@media only screen and (max-width: 37.5em) {
+@media all and (max-width: 37.5rem) {
   .text-primary {
     font-size: 2rem;
   }
@@ -302,7 +298,7 @@ textarea {
   position: relative;
 }
 
-@media only screen and (max-width: 37.5em) {
+@media all and (max-width: 37.5rem) {
   .home-hero {
     height: unset;
     min-height: unset;
@@ -317,7 +313,7 @@ textarea {
   transform: translateY(-50%);
 }
 
-@media only screen and (max-width: 56.25em) {
+@media all and (max-width: 57.25rem) {
   .home-hero__socials {
     display: none;
   }
@@ -330,7 +326,7 @@ textarea {
   transform: translateX(-50%);
 }
 
-@media only screen and (max-width: 37.5em) {
+@media all and (max-width: 37.5rem) {
   .home-hero__mouse-scroll-cont {
     display: none;
   }
@@ -370,7 +366,7 @@ textarea {
   width: 92%;
 }
 
-@media only screen and (max-width: 37.5em) {
+@media all and (max-width: 37.5rem) {
   .home-hero__content {
     padding: 19rem 0 13rem 0;
     margin: auto;
@@ -399,7 +395,7 @@ textarea {
   grid-gap: 10rem;
 }
 
-@media only screen and (max-width: 56.25em) {
+@media all and (max-width: 57.25rem) {
   .about__content {
     grid-template-columns: 1fr;
     grid-gap: 8rem;
@@ -413,7 +409,7 @@ textarea {
   margin-top: 5rem;
 }
 
-@media only screen and (max-width: 37.5em) {
+@media all and (max-width: 37.5rem) {
   .about__content-title {
     font-size: 2.4rem;
   }
@@ -443,7 +439,7 @@ textarea {
   margin-bottom: 11rem;
 }
 
-@media only screen and (max-width: 56.25em) {
+@media all and (max-width: 57.25rem) {
   .projects__row {
     grid-template-columns: 1fr;
     grid-gap: 2rem;
@@ -451,7 +447,7 @@ textarea {
   }
 }
 
-@media only screen and (max-width: 37.5em) {
+@media all and (max-width: 37.5rem) {
   .projects__row {
     text-align: center;
   }
@@ -479,7 +475,7 @@ textarea {
   align-items: flex-start;
 }
 
-@media only screen and (max-width: 56.25em) {
+@media all and (max-width: 57.25rem) {
   .projects__row-content {
     align-items: center;
   }
@@ -491,7 +487,7 @@ textarea {
   margin-bottom: 2rem;
 }
 
-@media only screen and (max-width: 37.5em) {
+@media all and (max-width: 37.5rem) {
   .projects__row-content-title {
     font-size: 2.4rem;
   }
@@ -505,14 +501,37 @@ textarea {
   margin-bottom: 3rem;
 }
 
+#githubCalender {
+  background-color: #000;
+  color: #ebebeb;
+  padding: 2%;
+}
+
 #githubStats {
   background-color: #000;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   color: #ebebeb;
   padding: 2%;
   margin-bottom: 15rem;
 }
 
-@media only screen and (max-width: 37.5em) {
+@media all and (max-width: 37.5rem) {
+  #githubStats {
+    display: block;
+    text-align: center;
+  }
+}
+
+@media all and (max-width: 57.25rem) {
+  #githubStats {
+    display: block;
+    text-align: center;
+  }
+}
+
+@media all and (max-width: 37.5rem) {
   .projects__row-content-desc {
     font-size: 1.7rem;
   }
@@ -539,7 +558,7 @@ textarea {
   margin: 5rem auto 0 auto;
 }
 
-@media only screen and (max-width: 37.5em) {
+@media all and (max-width: 37.5rem) {
   .contact__form-container {
     padding: 3rem;
   }
@@ -549,7 +568,7 @@ textarea {
   margin-bottom: 4rem;
 }
 
-@media only screen and (max-width: 37.5em) {
+@media all and (max-width: 37.5rem) {
   .contact__form-field {
     margin-bottom: 3rem;
   }
@@ -628,7 +647,7 @@ textarea {
   color: white;
 }
 
-@media only screen and (max-width: 37.5em) {
+@media all and (max-width: 37.5rem) {
   .contact__btn {
     width: 100%;
   }
@@ -650,7 +669,7 @@ textarea {
   padding: 1rem 5rem;
 }
 
-@media only screen and (max-width: 56.25em) {
+@media all and (max-width: 57.25rem) {
   .header__content {
     padding: 0 2rem;
   }
@@ -676,7 +695,7 @@ textarea {
   margin-right: 1.5rem;
 }
 
-@media only screen and (max-width: 56.25em) {
+@media all and (max-width: 57.25rem) {
   .header__logo-img-cont {
     width: 4.5rem;
     height: 4.5rem;
@@ -703,7 +722,7 @@ textarea {
   display: flex;
 }
 
-@media only screen and (max-width: 37.5em) {
+@media all and (max-width: 37.5rem) {
   .header__links {
     display: none;
   }
@@ -724,7 +743,7 @@ textarea {
   color: rgb(15, 87, 160);
 }
 
-@media only screen and (max-width: 56.25em) {
+@media all and (max-width: 57.25rem) {
   .header__link {
     padding: 3rem 1.8rem;
     font-size: 1.5rem;
@@ -733,11 +752,11 @@ textarea {
 
 .header__main-ham-menu-cont {
   display: none;
-  width: 3rem;
+  width: 5rem;
   padding: 2.2rem 0;
 }
 
-@media only screen and (max-width: 37.5em) {
+@media all and (max-width: 37.5rem) {
   .header__main-ham-menu-cont {
     display: block;
   }
@@ -769,7 +788,7 @@ textarea {
   opacity: 0;
 }
 
-@media only screen and (max-width: 37.5em) {
+@media all and (max-width: 37.5rem) {
   .header__sm-menu--active {
     visibility: visible;
     opacity: 1;
@@ -824,13 +843,13 @@ textarea {
   padding: 8rem 0;
 }
 
-@media only screen and (max-width: 56.25em) {
+@media all and (max-width: 57.25rem) {
   .main-footer__upper {
     padding: 6rem 0;
   }
 }
 
-@media only screen and (max-width: 37.5em) {
+@media all and (max-width: 37.5rem) {
   .main-footer__upper {
     display: block;
 
@@ -841,7 +860,7 @@ textarea {
   order: 2;
 }
 
-@media only screen and (max-width: 56.25em) {
+@media all and (max-width: 57.25rem) {
   .main-footer__row-1 {
     margin-bottom: 5rem;
   }
@@ -853,7 +872,7 @@ textarea {
   max-width: 50rem;
 }
 
-@media only screen and (max-width: 56.25em) {
+@media all and (max-width: 57.25rem) {
   .main-footer__row-2 {
     width: 100%;
   }
@@ -894,12 +913,12 @@ textarea {
   margin-left: 2px;
 }
 
-@media only screen and (max-width: 56.25em) {
+@media all and (max-width: 57.25rem) {
   .main-footer__lower {
     padding: 3.5rem 0;
   }
 
- 
+
 }
 
 .skills {
@@ -973,4 +992,75 @@ textarea {
 .fragrance {
   width: 100%;
   border-radius: 4px;
+}
+
+
+
+
+
+/* UPDATED MEDIA QUERY */
+
+@media all and (max-width: 37.5rem) {
+  .main-container {
+    display: block;
+    text-align: center;
+    width: 85%;
+    margin: auto;
+  }
+
+  .heading_about_imagediv {
+    display: block;
+    text-align: center;
+
+  }
+
+  .heading_about_imagediv>img {
+    width: 50%;
+    padding: 4%;
+  }
+
+  .about__content {
+    text-align: center;
+  }
+
+  .about_contact_resume {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .about__content-details-para {
+    text-align: center;
+  }
+}
+
+@media all and (max-width: 57.25rem) {
+  .main-container {
+    display: block;
+    width: 85%;
+    margin: auto;
+  }
+
+  .heading_about_imagediv {
+    display: block;
+    text-align: center;
+
+  }
+
+  .heading_about_imagediv>img {
+    width: 50%;
+    padding: 4%;
+  }
+
+  .about__content {
+    text-align: center;
+  }
+
+  .about_contact_resume {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .about__content-details-para {
+    text-align: center;
+  }
 }
