--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ $breakpoint arguement choices:
 - tab-land
 - big-desktop
 
-Inside media queries 1em is always 16px i.e 1em = 16px at every screen size all media queries
+Inside media queries 1em is always 16px i.e 1em = 16px at every screen size only inside media queries
 */
 *,
 *::after,
@@ -26,21 +26,21 @@ html {
   scroll-behavior: smooth;
 }
 
-@media all and (max-width: 600px) {
+@media only screen and (max-width: 75em) {
   html {
-    font-size: 40%;
+    font-size: 59%;
   }
 }
 
-@media all and (max-width: 57.25rem) {
+@media only screen and (max-width: 56.25em) {
   html {
-    font-size: 60%;
+    font-size: 56%;
   }
 }
 
-@media all and (min-width: 112.5em) {
+@media only screen and (min-width: 112.5em) {
   html {
-    font-size: 75%;
+    font-size: 65%;
   }
 }
 
@@ -86,7 +86,7 @@ textarea {
   text-align: center;
 }
 
-@media all and (max-width: 37.5rem) {
+@media only screen and (max-width: 37.5em) {
   .heading-primary {
     font-size: 4.5rem;
   }
@@ -96,18 +96,17 @@ textarea {
   margin-bottom: 11rem;
 }
 
-@media all and (max-width: 57.25rem) {
+@media only screen and (max-width: 56.25em) {
   .heading-sec__mb-bg {
     margin-bottom: 8rem;
   }
-
 }
 
 .heading-sec__mb-med {
   margin-bottom: 9rem;
 }
 
-@media all and (max-width: 57.25rem) {
+@media only screen and (max-width: 56.25em) {
   .heading-sec__mb-med {
     margin-bottom: 8rem;
   }
@@ -118,6 +117,13 @@ textarea {
   gap: 50px;
   width: 90%;
   margin: auto;
+}
+
+@media only screen and (max-width: 37.5em) {
+  .heading_about_imagediv {
+    display: block;
+    text-align: center;
+  }
 }
 
 .heading-sec__main {
@@ -146,13 +152,13 @@ textarea {
   top: calc(100% + 1.5rem);
   height: 5px;
   width: 3rem;
-  background: rgb(17, 96, 175);
+  background: rgba(132, 228, 245, 0.8);
   left: 50%;
   transform: translateX(-50%);
   border-radius: 5px;
 }
 
-@media all and (max-width: 37.5rem) {
+@media only screen and (max-width: 37.5em) {
   .heading-sec__main::after {
     top: calc(100% + 1.2rem);
   }
@@ -169,7 +175,7 @@ textarea {
   line-height: 1.6;
 }
 
-@media all and (max-width: 37.5rem) {
+@media only screen and (max-width: 37.5em) {
   .heading-sec__sub {
     font-size: 1.8rem;
   }
@@ -185,14 +191,8 @@ textarea {
   letter-spacing: 1px;
 }
 
-.subheading-sm {
-  font-size: 1.5rem;
-  /* text-transform: uppercase; */
-  letter-spacing: 1px;
-}
-
 .main-container {
-  /* max-width: 120rem; */
+  max-width: 120rem;
   margin: auto;
   width: 92%;
 }
@@ -261,7 +261,7 @@ textarea {
   padding: 12rem 0;
 }
 
-@media all and (max-width: 57.25rem) {
+@media only screen and (max-width: 56.25em) {
   .sec-pad {
     padding: 8rem 0;
   }
@@ -275,7 +275,7 @@ textarea {
   line-height: 1.6;
 }
 
-@media all and (max-width: 37.5rem) {
+@media only screen and (max-width: 37.5em) {
   .text-primary {
     font-size: 2rem;
   }
@@ -298,7 +298,7 @@ textarea {
   position: relative;
 }
 
-@media all and (max-width: 37.5rem) {
+@media only screen and (max-width: 37.5em) {
   .home-hero {
     height: unset;
     min-height: unset;
@@ -313,7 +313,7 @@ textarea {
   transform: translateY(-50%);
 }
 
-@media all and (max-width: 57.25rem) {
+@media only screen and (max-width: 56.25em) {
   .home-hero__socials {
     display: none;
   }
@@ -395,7 +395,7 @@ textarea {
   grid-gap: 10rem;
 }
 
-@media all and (max-width: 57.25rem) {
+@media only screen and (max-width: 56.25em) {
   .about__content {
     grid-template-columns: 1fr;
     grid-gap: 8rem;
@@ -439,7 +439,7 @@ textarea {
   margin-bottom: 11rem;
 }
 
-@media all and (max-width: 57.25rem) {
+@media only screen and (max-width: 56.25em) {
   .projects__row {
     grid-template-columns: 1fr;
     grid-gap: 2rem;
@@ -447,7 +447,7 @@ textarea {
   }
 }
 
-@media all and (max-width: 37.5rem) {
+@media only screen and (max-width: 56.25em) {
   .projects__row {
     text-align: center;
   }
@@ -501,37 +501,8 @@ textarea {
   margin-bottom: 3rem;
 }
 
-#githubCalender {
-  background-color: #000;
-  color: #ebebeb;
-  padding: 2%;
-}
 
-#githubStats {
-  background-color: #000;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  color: #ebebeb;
-  padding: 2%;
-  margin-bottom: 15rem;
-}
-
-@media all and (max-width: 37.5rem) {
-  #githubStats {
-    display: block;
-    text-align: center;
-  }
-}
-
-@media all and (max-width: 57.25rem) {
-  #githubStats {
-    display: block;
-    text-align: center;
-  }
-}
-
-@media all and (max-width: 37.5rem) {
+@media only screen and (max-width: 37.5em) {
   .projects__row-content-desc {
     font-size: 1.7rem;
   }
@@ -558,7 +529,7 @@ textarea {
   margin: 5rem auto 0 auto;
 }
 
-@media all and (max-width: 37.5rem) {
+@media only screen and (max-width: 37.5em) {
   .contact__form-container {
     padding: 3rem;
   }
@@ -568,7 +539,7 @@ textarea {
   margin-bottom: 4rem;
 }
 
-@media all and (max-width: 37.5rem) {
+@media only screen and (max-width: 37.5em) {
   .contact__form-field {
     margin-bottom: 3rem;
   }
@@ -647,7 +618,7 @@ textarea {
   color: white;
 }
 
-@media all and (max-width: 37.5rem) {
+@media only screen and (max-width: 37.5em) {
   .contact__btn {
     width: 100%;
   }
@@ -669,7 +640,7 @@ textarea {
   padding: 1rem 5rem;
 }
 
-@media all and (max-width: 57.25rem) {
+@media only screen and (max-width: 56.25em) {
   .header__content {
     padding: 0 2rem;
   }
@@ -695,7 +666,7 @@ textarea {
   margin-right: 1.5rem;
 }
 
-@media all and (max-width: 57.25rem) {
+@media only screen and (max-width: 56.25em) {
   .header__logo-img-cont {
     width: 4.5rem;
     height: 4.5rem;
@@ -743,7 +714,7 @@ textarea {
   color: rgb(15, 87, 160);
 }
 
-@media all and (max-width: 57.25rem) {
+@media only screen and (max-width: 56.25em) {
   .header__link {
     padding: 3rem 1.8rem;
     font-size: 1.5rem;
@@ -756,7 +727,7 @@ textarea {
   padding: 2.2rem 0;
 }
 
-@media all and (max-width: 37.5rem) {
+@media only screen and (max-width: 37.5em) {
   .header__main-ham-menu-cont {
     display: block;
   }
@@ -788,7 +759,8 @@ textarea {
   opacity: 0;
 }
 
-@media all and (max-width: 37.5rem) {
+
+@media only screen and (max-width: 37.5em) {
   .header__sm-menu--active {
     visibility: visible;
     opacity: 1;
@@ -843,16 +815,16 @@ textarea {
   padding: 8rem 0;
 }
 
-@media all and (max-width: 57.25rem) {
+
+@media only screen and (max-width: 56.25em) {
   .main-footer__upper {
     padding: 6rem 0;
   }
 }
 
-@media all and (max-width: 37.5rem) {
+@media only screen and (max-width: 37.5em) {
   .main-footer__upper {
     display: block;
-
   }
 }
 
@@ -860,19 +832,19 @@ textarea {
   order: 2;
 }
 
-@media all and (max-width: 57.25rem) {
+@media only screen and (max-width: 56.25em) {
   .main-footer__row-1 {
     margin-bottom: 5rem;
   }
 }
 
 .main-footer__row-2 {
-  width: 100%;
+  width: 40%;
   order: 1;
   max-width: 50rem;
 }
 
-@media all and (max-width: 57.25rem) {
+@media only screen and (max-width: 56.25em) {
   .main-footer__row-2 {
     width: 100%;
   }
@@ -913,12 +885,10 @@ textarea {
   margin-left: 2px;
 }
 
-@media all and (max-width: 57.25rem) {
+@media only screen and (max-width: 56.25em) {
   .main-footer__lower {
     padding: 3.5rem 0;
   }
-
-
 }
 
 .skills {
@@ -994,73 +964,45 @@ textarea {
   border-radius: 4px;
 }
 
+#githubCalender {
+  background-color: #000;
+  color: #ebebeb;
+  padding: 2%;
+}
 
+.calendar {
+  width: 100%;
+  /* set the width of the div to 100% of the container */
+  height: 100%;
+  /* set the height of the div to 100% of the container */
+  box-sizing: border-box;
+  /* include padding and border in the total size */
+  overflow: hidden;
+  /* hide any content that overflows */
+}
 
+#githubStats {
+  background-color: #000;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: #ebebeb;
+  padding: 2%;
+  margin-bottom: 15rem;
+}
 
-
-/* UPDATED MEDIA QUERY */
-
-@media all and (max-width: 37.5rem) {
-  .main-container {
+@media only screen and (max-width: 37.5rem) {
+  #githubStats {
     display: block;
     text-align: center;
-    width: 85%;
-    margin: auto;
-  }
 
-  .heading_about_imagediv {
-    display: block;
-    text-align: center;
-
-  }
-
-  .heading_about_imagediv>img {
-    width: 50%;
-    padding: 4%;
-  }
-
-  .about__content {
-    text-align: center;
-  }
-
-  .about_contact_resume {
-    display: flex;
-    justify-content: space-around;
-  }
-
-  .about__content-details-para {
-    text-align: center;
   }
 }
 
-@media all and (max-width: 57.25rem) {
-  .main-container {
-    display: block;
-    width: 85%;
-    margin: auto;
-  }
-
-  .heading_about_imagediv {
+@media only screen and (max-width: 57.25rem) {
+  #githubStats {
     display: block;
     text-align: center;
 
-  }
-
-  .heading_about_imagediv>img {
-    width: 50%;
-    padding: 4%;
-  }
-
-  .about__content {
-    text-align: center;
-  }
-
-  .about_contact_resume {
-    display: flex;
-    justify-content: space-around;
-  }
-
-  .about__content-details-para {
-    text-align: center;
   }
 }
